--- a/src/app/modulos/seguridad/identificacion/identificacion.component.html
+++ b/src/app/modulos/seguridad/identificacion/identificacion.component.html
@@ -1,1 +1,58 @@
-<p>identificacion works!</p>
+<form [formGroup]="fgValidador" > <!-- Change The Form Method From Here-->
+    <div class="card-panel z-depth-5">
+
+        <!-- Form Logo Section  -->
+
+        <div class="row margin">
+            <div class="col s12 m12 l12 center">
+                <img src="https://i.imgur.com/ypAbAYt.png"
+                 alt="" class="responsive-img circle" style="width:100px;">
+                <p>Ingresa a GeekvolutionShop</p>
+            </div>
+        </div>
+
+        <!-- Form Username Input Section -->
+
+        <div class="col s12 m12 l12">
+            <div class="input-field">
+                <i class="material-icons prefix">person</i>
+                <input formControlName='usuario'type="text" name="username" id="username">
+                <label for="username">Usuario</label>
+            </div>
+        </div>
+
+        <!-- Form Password Input Section -->
+
+        <div class="col m12 l12">
+            <div class="input-field">
+                <i class="material-icons prefix">lock</i>
+                <input formControlName='clave' type="password" name="password" id="password">
+                <label for="password">Contraseña</label>
+            </div>
+        </div>
+
+            <!-- Form Chekbox (Remember Me) Input Section -->
+        <!--
+        <div class="left">
+            <input type="checkbox" id="checkbox">
+            <label for="checkbox">Remember Me</label>
+        </div>
+        <br><br>
+        -->
+            <!-- Form Button Section  -->
+
+        <div class="center">
+            <input (click)="IdentificarUsuario()" [disabled]= "!fgValidador.valid" type="submit" value="Ingresar" name="login" 
+            class="btn waves-effect waves-light " 
+            style="width:100%; background-color: #ff4081;">
+        </div>
+
+            <!-- Form "Register Now" And "Forgot Password" Link Section. -->
+
+        <div class="" style="font-size:14px;"><br>
+            <a routerLink="/administracion/crear-persona" class="left">Register Now!</a>
+            <a href="" class="right ">Forgot Password?</a>
+        </div><br>
+        
+    </div>
+</form>
