--- a/src/app/plantilla/barra-navegacion/barra-navegacion.component.html
+++ b/src/app/plantilla/barra-navegacion/barra-navegacion.component.html
@@ -3,18 +3,20 @@
       <a href="#!" class="brand-logo">Logo</a>
       <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
       <ul class="right hide-on-med-and-down">
-        <li><a href="sass.html">Sass</a></li>
-        <li><a href="badges.html">Components</a></li>
-        <li><a href="collapsible.html">Javascript</a></li>
-        <li><a href="mobile.html">Mobile</a></li>
+        <li *ngIf= "sesionIniciada"><a routerLink="inicio">Inicio</a></li>
+        <li *ngIf= "sesionIniciada"><a routerLink="administracion/personas">Clientes</a></li>
+        <li *ngIf= "sesionIniciada"><a routerLink="seguridad/cambioclave">Cambio de clave</a></li>
+        <li *ngIf= "sesionIniciada"><a routerLink="seguridad/cerrar-sesion">Cerrar Sesión</a></li>
+        <li *ngIf= "!sesionIniciada"><a routerLink="seguridad/identificar">Iniciar Sesión</a></li>
       </ul>
     </div>
   </nav>
 
   <ul class="sidenav" id="mobile-demo">
-    <li><a href="sass.html">Sass</a></li>
-    <li><a href="badges.html">Components</a></li>
-    <li><a href="collapsible.html">Javascript</a></li>
-    <li><a href="mobile.html">Mobile</a></li>
+    <li *ngIf= "sesionIniciada"><a routerLink="inicio">Inicio</a></li>
+        <li *ngIf= "sesionIniciada"><a routerLink="administracion/personas">Clientes</a></li>
+        <li *ngIf= "sesionIniciada"><a routerLink="seguridad/cambioclave">Cambio de clave</a></li>
+        <li *ngIf= "sesionIniciada"><a routerLink="seguridad/cerrar-sesion">Cerrar Sesión</a></li>
+        <li *ngIf= "!sesionIniciada"><a routerLink="seguridad/identificar">Iniciar Sesión</a></li>
   </ul>
           
