--- a/src/app/plantilla/barra-navegacion/barra-navegacion.component.html
+++ b/src/app/plantilla/barra-navegacion/barra-navegacion.component.html
@@ -4,6 +4,7 @@
       <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
       <ul class="right hide-on-med-and-down">
         <li *ngIf= "sesionIniciada"><a routerLink="inicio">Inicio</a></li>
+        <li *ngIf= "sesionIniciada"><a routerLink="administracion/buscar-producto">Productos</a></li>
         <li *ngIf= "sesionIniciada"><a routerLink="administracion/personas">Clientes</a></li>
         <li *ngIf= "sesionIniciada"><a routerLink="seguridad/cambioclave">Cambio de clave</a></li>
         <li *ngIf= "sesionIniciada"><a routerLink="seguridad/cerrar-sesion">Cerrar Sesión</a></li>
@@ -14,6 +15,7 @@
 
   <ul class="sidenav" id="mobile-demo">
     <li *ngIf= "sesionIniciada"><a routerLink="inicio">Inicio</a></li>
+        <li *ngIf= "sesionIniciada"><a routerLink="administracion/buscar-producto">Productos</a></li>
         <li *ngIf= "sesionIniciada"><a routerLink="administracion/personas">Clientes</a></li>
         <li *ngIf= "sesionIniciada"><a routerLink="seguridad/cambioclave">Cambio de clave</a></li>
         <li *ngIf= "sesionIniciada"><a routerLink="seguridad/cerrar-sesion">Cerrar Sesión</a></li>
