--- a/src/app/modulos/administracion/productos/crear-producto/crear-producto.component.html
+++ b/src/app/modulos/administracion/productos/crear-producto/crear-producto.component.html
@@ -1,1 +1,68 @@
-<p>crear-producto works!</p>
+<form [formGroup]="fgValidador" > <!-- Change The Form Method From Here-->
+    <div class="card-panel z-depth-5">
+
+        <!-- Form Logo Section  -->
+
+        <div class="row margin">
+            <div class="col s12 m12 l12 center">
+                <img src="https://i.imgur.com/ypAbAYt.png"
+                 alt="" class="responsive-img circle" style="width:100px;">
+                <p>Creación de Productos GeekvolutionShop</p>
+            </div>
+        </div>
+
+        <!-- Form Username Input Section -->
+
+        <div class="col s12 m12 l12">
+            <div class="input-field">
+                <i class="material-icons prefix">important_devices</i>
+                <input formControlName='nombre'type="text" name="username" id="username">
+                <label for="username">Ingresar nombre del producto</label>
+            </div>
+        </div>
+
+        <div class="col s12 m12 l12">
+            <div class="input-field">
+                <i class="material-icons prefix">monetization_on</i>
+                <input formControlName='precio'type="text" name="precio" id="precio">
+                <label for="precio">Ingresar precio del producto</label>
+            </div>
+        </div>
+
+      
+        <!-- Form Password Input Section -->
+
+        <div class="col s12 m12 l12">
+            <div class="input-field">
+                <i class="material-icons prefix">photo</i>
+                <input formControlName='imagen'type="text" name="imagen" id="imagen">
+                <label for="imagen">Ingresar imagen del producto</label>
+            </div>
+        </div>
+
+            <!-- Form Chekbox (Remember Me) Input Section -->
+        <!--
+        <div class="left">
+            <input type="checkbox" id="checkbox">
+            <label for="checkbox">Remember Me</label>
+        </div>
+        <br><br>
+        -->
+            <!-- Form Button Section  -->
+
+        <div class="center">
+            <input (click)="GuardarProducto()" [disabled]= "!fgValidador.valid" type="submit" value="Guardar Producto" name="login" 
+            class="btn waves-effect waves-light " 
+            style="width:100%; background-color: #ff4081;">
+        </div>
+
+            <!-- Form "Register Now" And "Forgot Password" Link Section. 
+
+        <div class="" style="font-size:14px;"><br>
+            <a routerLink="/administracion/crear-producto" class="left">Register Now!</a>
+            <a href="" class="right ">Forgot Password?</a>
+        </div><br>  -->
+        
+    </div>
+</form>
+
