crud persona, guardianes, pedido(incompleto)

--- a/src/app/modulos/administracion/personas/buscar-persona/buscar-persona.component.html
+++ b/src/app/modulos/administracion/personas/buscar-persona/buscar-persona.component.html
@@ -1,1 +1,27 @@
-<p>buscar-persona works!</p>
+<table class ="table responsive">
+    <thead>
+        <tr>
+            <th>NOMBRE</th>
+            <th>APELLIDOS</th>
+            <th>CORREO</th>
+            <th>CELULAR</th>
+            <th>EDITAR</th>
+            <th>ELIMINAR</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr *ngFor= "let p of  ListaPersonas">
+            <td> {{p.nombres}} </td>
+            <td>{{p.apellidos}}</td>
+            <td>{{p.correo}}</td>
+            <td>{{p.celular}}</td>
+            <td><a routerLink="/administracion/editar-persona/{{p.id}}" class ="btn" >Editar</a></td>
+            <td><a routerLink="/administracion/eliminar-persona/{{p.id}}" class ="btn" btn="danger" >Eliminar</a></td>
+        </tr>
+    </tbody>
+    
+    </table>
+    
+    <br>
+    <a routerLink="/administracion/crear-persona" class="btn">Crear persona</a>
+    <br>
