--- a/src/app/modulos/administracion/personas/crear-persona/crear-persona.component.html
+++ b/src/app/modulos/administracion/personas/crear-persona/crear-persona.component.html
@@ -1,6 +1,6 @@
 
 <form class="container col s8">
-    <nav><h3 class="brand-logo col s12">Por favor genere su Registro </h3></nav>
+    <nav><h3 class="brand-logo col s12">Por favor genere el Registro </h3></nav>
     
     <form [formGroup]= "fgCreacion" (ngSubmit)="CrearUsuario()" class="container col s10">
       <div class="col m12 l12">
