--- a/src/app/modulos/administracion/personas/editar-persona/editar-persona.component.html
+++ b/src/app/modulos/administracion/personas/editar-persona/editar-persona.component.html
@@ -1,1 +1,76 @@
-<p>editar-persona works!</p>
+<form [formGroup]="fgValidador" > <!-- Change The Form Method From Here-->
+    <div class="card-panel z-depth-5">
+
+        <!-- Form Logo Section  -->
+        <input type="hidden" formControlName="id"/>
+        <div class="row margin">
+            <div class="col s12 m12 l12 center">
+                <img src="https://i.imgur.com/ypAbAYt.png"
+                 alt="" class="responsive-img circle" style="width:100px;">
+                <p>Edición Personas Geekvolutioners</p>
+            </div>
+        </div>
+
+        <!-- Form Username Input Section -->
+
+        <div class="col s12 m12 l12">
+            <div class="input-field">
+                <i class="material-icons prefix">contacts</i>
+                <input formControlName='nombre'type="text" name="username" id="username">
+                <label class="active" for="username">Ingresar nombre del persona</label>
+            </div>
+        </div>
+
+        <div class="col s12 m12 l12">
+            <div class="input-field">
+                <i class="material-icons prefix">contacts</i>
+                <input formControlName='apellidos'type="text" name="apellidos" id="apellidos">
+                <label class="active" for="apellidos">Ingresar apellidos </label>
+            </div>
+        </div>
+
+      
+        <!-- Form Password Input Section -->
+
+        <div class="col s12 m12 l12">
+            <div class="input-field">
+                <i class="material-icons prefix">email</i>
+                <input formControlName='correo'type="email" name="correo" id="correo">
+                <label class="active" for="correo">Ingresar correo</label>
+            </div>
+        </div>
+
+        <div class="col s11 m11 l11">
+            <div class="input-field">
+                <i class="material-icons prefix">smartphone</i>
+                <input formControlName='celular' type="Phone" name="celular" id="celular">
+                <label class="active" for="celular">Ingresar numero de celular</label>
+            </div>
+        </div>
+
+            <!-- Form Chekbox (Remember Me) Input Section -->
+        <!--
+        <div class="left">
+            <input type="checkbox" id="checkbox">
+            <label for="checkbox">Remember Me</label>
+        </div>
+        <br><br>
+        -->
+            <!-- Form Button Section  -->
+
+        <div class="center">
+            <input (click)="EditarPersona()" [disabled]= "!fgValidador.valid" type="submit" value="Editar Persona" name="login" 
+            class="btn waves-effect waves-light " 
+            style="width:95%; background-color: #ff4081;">
+        </div>
+
+            <!-- Form "Register Now" And "Forgot Password" Link Section. 
+
+        <div class="" style="font-size:14px;"><br>
+            <a routerLink="/administracion/crear-producto" class="left">Register Now!</a>
+            <a href="" class="right ">Forgot Password?</a>
+        </div><br>  -->
+        
+    </div>
+</form>
+
