--- a/src/app/plantilla/barra-navegacion/barra-navegacion.component.html
+++ b/src/app/plantilla/barra-navegacion/barra-navegacion.component.html
@@ -5,7 +5,8 @@
       <ul class="right hide-on-med-and-down">
         <li *ngIf= "sesionIniciada"><a routerLink="inicio">Inicio</a></li>
         <li *ngIf= "sesionIniciada"><a routerLink="administracion/buscar-producto">Productos</a></li>
-        <li *ngIf= "sesionIniciada"><a routerLink="administracion/personas">Clientes</a></li>
+        <li *ngIf= "sesionIniciada"><a routerLink="administracion/buscar-persona">Clientes</a></li>
+        <li *ngIf= "sesionIniciada"><a routerLink="pedidos/realizar-pedido">Pedidos</a></li>
         <li *ngIf= "sesionIniciada"><a routerLink="seguridad/cambioclave">Cambio de clave</a></li>
         <li *ngIf= "sesionIniciada"><a routerLink="seguridad/cerrar-sesion">Cerrar Sesión</a></li>
         <li *ngIf= "!sesionIniciada"><a routerLink="seguridad/identificar">Iniciar Sesión</a></li>
@@ -16,7 +17,8 @@
   <ul class="sidenav" id="mobile-demo">
     <li *ngIf= "sesionIniciada"><a routerLink="inicio">Inicio</a></li>
         <li *ngIf= "sesionIniciada"><a routerLink="administracion/buscar-producto">Productos</a></li>
-        <li *ngIf= "sesionIniciada"><a routerLink="administracion/personas">Clientes</a></li>
+        <li *ngIf= "sesionIniciada"><a routerLink="administracion/buscar-persona">Clientes</a></li>
+        <li *ngIf= "sesionIniciada"><a routerLink="pedidos/realizar-pedido">Pedidos</a></li>
         <li *ngIf= "sesionIniciada"><a routerLink="seguridad/cambioclave">Cambio de clave</a></li>
         <li *ngIf= "sesionIniciada"><a routerLink="seguridad/cerrar-sesion">Cerrar Sesión</a></li>
         <li *ngIf= "!sesionIniciada"><a routerLink="seguridad/identificar">Iniciar Sesión</a></li>
